fix: CORS producción + UX errores en formulario de evento
Backend:
- SecurityConfig: CORS_ALLOWED_ORIGINS configurable por env var (soporta lista CSV)
- application.yml: nueva propiedad app.cors.allowed-origins
- docker-compose.prod.yml: CORS_ALLOWED_ORIGINS=https://elbunkerdelingeniero.duckdns.org

Frontend (evento-form):
- markAllAsTouched() al hacer submit → errores inline visibles de inmediato
- Banner de error persistente (no snackbar) para errores de API con botón cerrar
- Helper apiError() con mensajes claros: sin red, 403, 401, validaciones del servidor
- Inputs con borde rojo al tener error (campo-input--error)
- Mensajes de validación específicos por tipo (required vs maxlength)
- Hint bajo el botón guardar si el form tiene campos inválidos tras el submit

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>